# counsel

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
counsel/: __init__.py  cli.py
counsel/cases/: allegation.py  client.py
counsel/clients/: chat.py
counsel/defense/: attorney.py  brief.py  prompts.py
counsel/evidence/: index.py
counsel/framing/: theory.py
counsel/io/: store.py
docs/: ARCHITECTURE.md  CASE_FORMAT.md
examples/: defending_altman.json  defending_musk.json
tests/: conftest.py  test_attorney.py  test_brief.py  test_cases.py  test_evidence.py
